# XAI-Care

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  HOW_IT_WORKS.md  PROCESS.md  README.md  app.py  build_pdf.py  example.py  instruktioner.md  pitch.md  pyproject.toml  requirements-app.txt  submission.md
analysis/: .gitignore
analysis/benchmark/: README.md  benchmark.py  overlay_similarity_plots.py  utils.py
analysis/data/: __init__.py  base.py
analysis/data/symptom_to_diagnosis/: README.md  reduced_symptom_dataset.csv  symptom.py
docs/: api.rst  conf.py  index.rst  tutorial.rst
docs/_static/: landing.css
src/llmSHAP/: image.py  prompt_codec.py  types.py  value_functions.py
src/llmSHAP/attribution_methods/: attribution_function.py  shapley_attribution.py
src/llmSHAP/llm/: __init__.py  dummy.py  langchain.py  llm_interface.py  openai.py
tests/: test_counterfactual_sampler.py  test_data_handler.py  test_full_enumeration_sampler.py  test_image.py  test_openai_interface.py  test_prompt_codec.py  test_random_sampler.py  test_similarity_functions.py  test_sliding_window_sampler.py  test_threads_attribution.py
